[project]
name = "onfabric-data-science-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<2.4",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.11",
    "voyageai>=0.3.7",
]
